style: overflow on cdcs containers fix

--- a/src/components/CSS/MoreCourses.module.css
+++ b/src/components/CSS/MoreCourses.module.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   /* overflow: auto; */
   /* scrollbar-width: none; */
 }
